# devtools_scicomp_project_2025

./: .gitignore  README.md  pyproject.toml
shell/: submit.sh
